discord_themes/TaskForce141_CV_v6.theme.css
/**
 * @name Task Force 141
 * @author ClearVision Team & Alcatraz
 * @version 6.3.0
 * @description Highly customizable theme for BetterDiscord made for people who are fans of
    the OG Task Force 141. Recommended appearance settings is dark theme, 18px chat font
    scaling, and 90% zoom level.
 * @source https://github.com/ClearVision/ClearVision-v6
 * @website https://clearvision.github.io
 * @invite dHaSxn3
 * @updateUrl https://stevencaior.github.io/discord_themes/TaskForce141_CV_v6.theme.css
 */
@import url(https://clearvision.github.io/ClearVision-v6/main.css);
@import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/ServerColumns/ServerColumns.css);
@import url(https://fonts.googleapis.com/css2?family=Orbitron:wght@100;300;400;500;700&display=swap);
@import url(https://stevencaior.github.io/discord_themes/addons/alky_CV_addons.css);
@import url(https://stevencaior.github.io/discord_themes/addons/alky_CV_RadialGlowSupport.css); /*Remove if you want normal statuses*/

:root {
  --custom-mark: "Task Force 141 Communications";
  --custom-mark-2: "Task Force 141";

  /* LEOZARD'S SPEECH BUBBLES */
  --bubble-color: rgb(0,0,0,0.7);
  --bubble-hover-color: rgb(20,20,20,0.7);

  /* ALKY SETTINGS PAGE */
  --nitro-bg-image: url(https://vulcan.dl.playstation.net/img/rnd/202008/1421/JmIqaC9wyqKgTos9uUeqMFZu.jpg);
  --nitro-bg-pos: center;

  /* ALKY MESSAGE BOX */
  --mb-placeholder-1: rgb(var(--text-muted-numerical), 0.7);
  --mb-placeholder-2: var(--text-muted);

  /* ALKY CV ADDONS */
  --profile-popout-width: 19.55vw;
  --profile-popout-picture-size: calc(var(--profile-popout-width)*0.6);

  /* SERVER COLUMNS */
  --columns: 3;
  --guildgap: 3;

	/* ACCENT COLORS */
  --main-color-numerical: 107, 150, 194;
  --main-color: rgb(var(--main-color-numerical));
  --hover-color-numerical: 79, 111, 143;
  --hover-color: rgb(var(--hover-color-numerical));
  --success-color-numerical: 67, 181, 129; /*default: 67, 181, 129*/
  --success-color: rgb(var(--success-color-numerical));
  --danger-color-numerical: 76, 97, 117;
  --danger-color:rgb(var(--danger-color-numerical));
  --button-danger-background-hover: rgb(161, 47, 45);

  /* STATUS COLORS */
  --online-color-numerical: 36, 168, 109; /*default: 67, 181, 129*/
  --online-color:rgb(var(--online-color-numerical));
  --idle-color-numerical: 250, 198, 25; /*230, 182, 25*/
  --idle-color: rgb(var(--idle-color-numerical));
  --dnd-color-numerical: 236, 19, 19; 
  --dnd-color:rgb(var(--dnd-color-numerical));
  --streaming-color-numerical: 145, 71, 255;
  --streaming-color:rgb(var(--streaming-color-numerical));
  --offline-color-numerical: 127,127,127; /*default: 116, 127, 141*/
  --offline-color:rgb(var(--offline-color-numerical));
  --some-orange-numerical: 249, 107, 6;
  --some-orange:rgb(var(--some-orange-numerical));

	/* CUSTOMIZATION PATCH */
  --url-color: var(--main-color);
  --channel-unread: var(--main-color);
  --channel-color:  rgba(255,255,255,0.7);
  --muted-color: rgba(255,255,255,0.3);

  /* THIRD PARTY THEME COLOURS */
  --spotify-color-numerical: 30,215,96;
  --spotify-color: rgb(var(--spotify-color-numerical));
  --twitter-color-numerical: 29, 161, 242;
  --twitter-color: rgb(var(--twitter-color-numerical));
  --facebook-color-numerical: 66, 103, 178;
  --facebook-color: rgb(var(--facebook-color-numerical));

  /* HORIZONTAL SERVER LIST */
  --HSL-server-icon-size: 55px;
  /*Actual size of server icons*/
  --HSL-size: calc(var(--HSL-size-actual)/(var(--zoom-level)/100));
  /*Standardizes the size of server icons depending on Zoom Levels in Appearance*/
  --HSL-server-spacing: 10px;  

	/* GENERAL */
  --main-font: Orbitron, system-ui;
  --font-primary: var(--main-font);
  --code-font: Consolas, monospace;
  --text-muted-numerical: var(--main-color-numerical);
  --text-muted: rgb(var(--text-muted-numerical));
  /*Miscellaneous text, such as dates, search bar 'search' and reactions*/
  --server-columns: 1;
  --channels-width: 230px; /*default: 220px*/
  --members-width: 230px; /*default: 240px*/

	/* APP BACKGROUND */
  --background-shading: 0%;
  --background-overlay: rgba(0, 0, 0, 0.2); /*default: rgba(0, 0, 0, 0.6)*/
  --background-image: url(https://i.imgur.com/fKftY3e.png);
  --background-position: center;
  --background-size: cover;
  --background-repeat: no-repeat;
  --background-attachment: fixed;
  --background-brightness: 100%; /*default: 100% (< 100% for darken, > 100% for lighten)*/
  --background-contrast: 100%;
  --background-saturation: 175%; /*default: 100%*/
  --background-invert: 0%; /*default: 0%*/
  --background-grayscale: 0%; /*default: 0%*/
  --background-blur: 0px; /*default: 0px*/
  --background-sepia: 0%; /*default: 0%*/
  /*--background-opacity:;*/
  
	/* HOME BUTTON ICON */
  --home-icon: url(https://i.imgur.com/pFOeOev.png);
  --home-position: center;
  --home-size: 45px;
	
	/* MODAL BACKDROP */
	--backdrop-overlay: var(--background-overlay); 
	--backdrop-image: var(--background-image); 
	--backdrop-position: var(--background-position); 
	--backdrop-size: var(--background-size); 
	--backdrop-repeat: var(--background-repeat); 
	--backdrop-attachment: var(--background-attachment); 
	--backdrop-brightness: var(--background-brightness); 
	--backdrop-contrast: var(--background-contrast); 
	--backdrop-saturation: var(--background-saturation);
	--backdrop-invert: var(--background-invert);
	--backdrop-grayscale: var(--background-grayscale); 
	--backdrop-sepia: var(--background-sepia); 
	--backdrop-blur: var(--background-blur); 
	
	/* USER POPOUT BACKGROUND */
	--user-popout-image: var(--background-image);
	--user-popout-position: var(--background-position);
	--user-popout-size: var(--background-size);
	--user-popout-repeat: var(--background-repeat);
	--user-popout-attachment: var(--background-attachment);
	--user-popout-brightness: var(--background-brightness); 
	--user-popout-contrast: var(--background-contrast); 
	--user-popout-saturation: var(--background-saturation);
	--user-popout-invert: var(--background-invert);
	--user-popout-grayscale: var(--background-grayscale); 
	--user-popout-blur: calc(var(--background-blur) + 3px); 
  --user-popout-sepia: var(--background-sepia); 
	
	/* USER MODAL BACKGROUND */
	--user-modal-image: var(--background-image);
	--user-modal-position: var(--background-position);
	--user-modal-size: var(--background-size);
	--user-modal-repeat: var(--background-repeat);
	--user-modal-attachment: var(--background-attachment);
	--user-modal-brightness: var(--background-brightness);
	--user-modal-contrast: var(--background-contrast);
	--user-modal-saturation: var(--background-saturation);
	--user-modal-invert: var(--background-invert);
	--user-modal-grayscale: var(--background-grayscale); 
	--user-modal-blur: calc(var(--background-blur) + 3px); 
	--user-modal-sepia: var(--background-sepia);

	/* THEME BD COLORS */
	--bd-blue: var(--main-color);
	--bd-blue-hover: var(--hover-color);
  --bd-blue-active: var(--hover-color);
  
  /* TEXT COLORS */
  --text-normal-numerical: 221, 221, 221; /*default: 220, 221, 222*/
  --text-normal: rgb(var(--text-normal-numerical));
}
/*-----LEOZARD'S SPEECH BUBBLES -----*/
/* Credits go to Leozard for making the original */
.cozyMessage-1DWF9U:not(.systemMessage-1H1Z20) .messageContent-2t3eCI,
.cozyMessage-1DWF9U:not(.systemMessage-1H1Z20) .container-2sjPya {
  width: fit-content;
  max-width: 90%;
  background-color: var(--bubble-color,hsla(0, 0%, 100%, 0.1));
  padding: 7px;
  border-radius: 10px;
  margin-top: 5px;
  margin-left: 0px;
}
.cozyMessage-1DWF9U:not(.systemMessage-1H1Z20):hover .messageContent-2t3eCI,
.cozyMessage-1DWF9U:not(.systemMessage-1H1Z20):hover .container-2sjPya {
  background-color: var(--bubble-hover-color, hsla(0, 0%, 100%, 0.15));
}
.cozyMessage-1DWF9U:not(.systemMessage-1H1Z20) .buttonContainer-1502pf {
  top: 24px
}
.cozyMessage-1DWF9U:not(.systemMessage-1H1Z20).groupStart-3Mlgv1 .buttonContainer-1502pf {
  top: 48px
}
.embedSuppressButton-1rZHq6 {
  right: 0;
}
.markup-eYLPri blockquote,
.markup-eYLPri pre {
  max-width: 100%;
}
.message-2CShn3.cozy-VmLDNB.hasReply-2Cr4KE .contents-2MsGLg img.avatar-2e8lTP{
  top: 2.625rem;
}
/*-----DISPLAY LINKS-----*/
#app-mount [aria-label="User Profile Modal"] .connectedAccountContainer-SlCC-S{
  background: rgb(var(--main-color-numerical), 0.1);
}
.connectedAccount-2PrNaX{
  display: flex;
  flex-wrap: wrap;
  height: auto;
}
.connectedAccount-2PrNaX img[class^="connectedAccountIcon"]{
  width: 24px;
  height: 24px;
}
.connectedAccount-2PrNaX a[class^="anchor-"]{
  width: 100%;
  display: block;
  position: relative;
  overflow: hidden;
  text-overflow: ellipsis;
  line-height: normal;
  padding-top: 3px;
}
.connectedAccount-2PrNaX a[class^="anchor-"] svg {
  display: none;
}
.connectedAccount-2PrNaX a[class^="anchor-"]:after {
  content: attr(href);
  width: 100%;
  white-space: nowrap;
}
/*-----VOICE CALL-----*/
/* CALL DOCK */
/*Call Dock: thingy w/ 4 buttons*/
/*Make selectors more specific if causing issues*/
div[class^="videoControls-"] > div[class^="bottomControls"] .wrapper-3t3Yqv {
  background: rgb(var(--main-color-numerical), 0.25);
  border-radius: 25px;
  padding: 5px;
  /*call dock background and shape*/
}
div[class^="videoControls-"] > div[class^="bottomControls"] .wrapper-3t3Yqv button{
  background: transparent;
  /*sets default background of each button to be transparent*/
}
div[class^="videoControls-"] > div[class^="bottomControls"] .wrapper-3t3Yqv button:hover{
  background: rgb(var(--main-color-numerical), 0.5);
  /*adjusts background of buttons upon hover*/
}
div[class^="videoControls-"] > div[class^="bottomControls"] .wrapper-3t3Yqv button[aria-label="Disconnect"]:hover{
  background: hsl(359,calc(var(--saturation-factor, 1)*82.6%),59.4%);
  /*adjusts disconnect button background upon hover separately*/
}
/* OPTIMIZED RTC CONNECTION POPOUT */
.container-1ILvLB .section-2zQkYM {
  background: var(--deprecated-panel-background) !important;
}
.container-1ILvLB .section-2zQkYM strong {
  white-space: pre;
  font-weight: normal;
}
.container-1ILvLB .section-2zQkYM div div[class^="popoutText-"]:nth-of-type(2) strong::before {
  content: 'Server: ';
}
/*-----WINDOWS BUTTONS-----*/
.winButton-3UMjdg[aria-label="Minimize"]:hover {
  background-color: var(--danger-color);
}
.winButton-3UMjdg[aria-label="Maximize"]:hover {
  background-color: var(--hover-color);
}
.winButtonClose-3Q8ZH5:hover {
  background-color: var(--main-color) !important;
}
/*sets background color upon hover of windows buttons*/
/*-----DENITROFY DISCORD-----*/
[href="/store"], div[class^="buttons"] > button[class^=button][aria-label="Send a gift"] {
  display: none;
}
/*-----SERVER BAR-----*/
/* ADD/EXPLORE BUTTON ICONS */
[data-list-item-id^="guildsnav___"][role="listitem"]{
  color: var(--main-color);
}
[data-list-item-id^="guildsnav___"][role="listitem"]:hover{
  color: #fff;
}
/*-----MUTE/DEAFEN/USER SETTINGS-----*/
[aria-label="User area"] [aria-label="Set Status"]+div button:hover path{
  fill: #fff;
}
/*-----SEARCH BOX-----*/
#uid_33 {
  position: fixed;
  right: 3.8vw;
  /*aligns position w/ search bar*/
}

